# crm-server

./: .gitignore  main.py  pyproject.toml  requirements.txt
src/: config.py  database.py  notes.txt
src/controllers/: account.py  auth.py  contact.py  lead.py  notes.py  user.py
src/middleware/: auth.py
src/models/: account.py  contact.py  deals.py  lead.py  user.py
src/routers/: account.py  authentication.py  contact.py  deals.py  lead.py  notes.py  user.py
src/schemas/: account.py  authentication.py  contact.py  lead.py  note.py  user.py
src/utility/: utils.py
