[project]
name = "crm-backend"
version = "0.1.0"
description = "CRM server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.122.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "tzdata>=2025.2",
    "uvicorn>=0.38.0",
    "pymongo>=4.15.5",
    "pyjwt>=2.10.1",
    "bcrypt>=5.0.0",
]
